<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#DBEDEF"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textSize="24sp"
                tools:textAlignment="center" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/rounded_corner_input_background"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColorHighlight="@color/colorRed"
                android:textColorHint="@color/colorWhiteGray"
                android:textColorLink="@color/colorRed"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner_input_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:textColorHighlight="#4CAF50"
                android:textColorHint="@color/colorWhiteGray"
                android:autofillHints="" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_corner_blue_background"
                android:backgroundTint="#2F80ED"
                android:text="@string/log_in"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="384dp"
                android:layout_height="56dp"

                android:layout_marginTop="12dp"
                android:background="@drawable/register_button_background"
                android:text="@string/register"
                tools:textColor="#F2994A" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
