<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    android:backgroundTint="#DCEDEB"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.PrimarySurface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#05477C"
            app:titleMargin="4dp"
            app:titleTextColor="@color/colorWhite">

            <TextView
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="80dp"
                android:gravity="center"
                android:text="SEEK HRM"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />
        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#05477C"
            app:tabTextColor="@color/colorWhite">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/history" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="⬤ Last 1 results"
        android:paddingLeft="25dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:background="#DF8EAA"
        android:gravity="center_vertical"
        android:text="May 2021"
        android:paddingLeft="15dp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"

        />

    <ListView
        android:id="@+id/history_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCEDEB"></ListView>

</LinearLayout>